--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,8 +16,10 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Running tests and SonarQube analysis...
-      - mvn clean verify sonar:sonar -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_TOKEN
+      - echo Running tests with JaCoCo coverage...
+      - mvn clean test jacoco:prepare-agent jacoco:report
+      - echo Running SonarQube analysis with coverage...
+      - mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.10.0.2594:sonar -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
