plugin sonar y jacoco

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,10 +16,12 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Running tests with JaCoCo coverage...
-      - mvn clean test jacoco:prepare-agent jacoco:report
-      - echo Running SonarQube analysis with coverage...
-      - mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.10.0.2594:sonar -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_TOKEN -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+      - echo Running tests with coverage...
+      - mvn clean test
+      - echo Verifying JaCoCo report was generated...
+      - ls -la target/site/jacoco/ || echo "JaCoCo report not found"
+      - echo Running SonarQube analysis...
+      - mvn sonar:sonar -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_TOKEN
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
