--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,6 +22,8 @@ phases:
       - ls -la target/site/jacoco/ || echo "JaCoCo report not found"
       - echo Running SonarQube analysis...
       - mvn sonar:sonar -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_TOKEN
+      - echo Packaging application...
+      - mvn package -DskipTests
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
