--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,6 +15,8 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - echo Running Checkstyle validation...
+      - mvn checkstyle:check
       - echo Running tests with coverage...
       - mvn clean test
       - echo Verifying JaCoCo report was generated...
